@@ -14,24 +14,26 @@
   FOREACH child = sortTokens(children(token));
     childpath = path(child);
     p = 'overview-subleave-name-' _ ovs;
-    ovwpath = childpath _ nodeParam(token, p,1);
-    IF nodeExists(ovwpath);
-      ovwtoken = pathToken(ovwpath);
+    FOREACH childname = nodeParam(token, p,1).split('\s*,\s*');
+      ovwpath = childpath _ childname;
+      IF nodeExists(ovwpath);
+        ovwtoken = pathToken(ovwpath);
 
-      urltoken = ovwtoken;
-      p = 'overview-direct-link-' _ ovs;
-      IF nodeParam(token, p, 1) == 'yes';
-        urltoken = child;
-        p = 'overview-direct-link-view-' _ ovs;
-        urlview = nodeParam(token, p, 1);
+        urltoken = ovwtoken;
+        p = 'overview-direct-link-' _ ovs;
+        IF nodeParam(token, p, 1) == 'yes';
+          urltoken = child;
+          p = 'overview-direct-link-view-' _ ovs;
+          urlview = nodeParam(token, p, 1);
+        END;
+
+        INCLUDE shortgraph
+          token=ovwtoken
+          urltoken=urltoken
+          urlview=urlview
+          nodename=nodeName(path(child))
+          comment=nodeParam(child,'comment',1);
       END;
-
-      INCLUDE shortgraph
-        token=ovwtoken
-        urltoken=urltoken
-        urlview=urlview
-        nodename=nodeName(path(child))
-        comment=nodeParam(child,'comment',1);
     END;
   END
 %]
